# CJKrelate

./: .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
CJKrelate/: __init__.py  decompose.py  frequency.py  image.py  radicalize.py  sort.py  variant.py
CJKrelate/chinese/: __init__.py
CJKrelate/database/chinese/: human.yaml
CJKrelate/japanese/: __init__.py
automate/: __init__.py  wanikani.py
manual/: __init__.py  image.py  manual.ipynb
relatedCJKchar/: __init__.py  decompose.py  frequency.py  image.py  radicalize.py  sort.py  variant.py
relatedCJchar/: __init__.py  dir.py  image.py  radicalize.py  variant.py
relatedCJchar/database/kradzip/: kradfile
test/: __init__.py  test_chinese.py  test_decompose.py  test_japanese.py  test_variant.py
